--- a/next/package.json
+++ b/next/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PORT=4000 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env PORT=4000 next start",
     "lint": "next lint",
     "clean": "rm -rf .next && rm -rf node_modules && npm i"
   },
@@ -28,6 +28,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "fuzzy-search": "^3.2.1",
+    "husky": "^9.1.7",
     "mini-svg-data-uri": "^1.4.4",
     "negotiator": "^0.6.3",
     "next": "14.2.5",
@@ -51,6 +52,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.167.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
