--- a/strapi/package.json
+++ b/strapi/package.json
@@ -36,7 +36,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "LAUNCHPAD"
+    "uuid": "LAUNCHPAD-LOCAL-1cb2bc03-a921-4c36-8d3e-b6ca3ed545d5"
   },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
